# user-authentication-in-rocket

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  database_setup.sql
src/: lib.rs  main.rs
src/crypto/: create_refresh.rs  hash.rs  jwt.rs  mod.rs
src/db/: create_refresh_entry.rs  create_user.rs  get_refresh_entry.rs  get_user.rs  mod.rs  user.rs
src/logs/: log_errors.rs  mod.rs
src/routes/accounts/: create_account.rs  mod.rs  refresh_token.rs  signin.rs
